<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FillInformationActivity">
    <TextView
            android:text="@string/headingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/headingTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textStyle="bold"
            android:layout_marginTop="10dp" app:layout_constraintHorizontal_bias="0.05"/>
    <TextView
            android:text="@string/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/headingTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.05" android:textSize="20sp"/>
    <TextView
            android:text="@string/avecTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/avecTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp" android:textSize="20sp" app:layout_constraintHorizontal_bias="0.05"/>
    <TextView
            android:text="@string/friendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/friendTextView"
            app:layout_constraintTop_toBottomOf="@+id/avecTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049" android:layout_marginTop="25dp" android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nameHint"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/nameEditText"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/headingTextView" android:layout_marginTop="20dp"
            android:minHeight="48dp" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/avecHint"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/avecEditText"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintHorizontal_bias="0.513" app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            android:layout_marginTop="7dp" android:minHeight="48dp" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/friendHint"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/friendEditText"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintHorizontal_bias="0.513" app:layout_constraintTop_toBottomOf="@+id/avecEditText"
            android:layout_marginTop="7dp" android:minHeight="48dp" android:autofillHints=""/>
    <Button
            android:text="@string/addParticipantBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addParticipantBtn"
            app:layout_constraintTop_toBottomOf="@+id/friendEditText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp" android:width="200sp"/>
    <Button
            android:text="@string/arrangeSeatingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
    />
    <TextView
            android:text="@string/tablesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tablesTextView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp" android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.05"/>
    <EditText
            android:text="@string/tablesDefaultEditTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tablesEditTextNumber"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:width="50sp" android:layout_marginBottom="5dp"
            android:minHeight="48dp" app:layout_constraintStart_toEndOf="@+id/tablesTextView"
            app:layout_constraintHorizontal_bias="0.05" android:autofillHints=""
            android:singleLine="true" android:maxLines="1"
            android:gravity="center|center_horizontal"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tablesTextView" android:layout_marginBottom="15dp"
            android:id="@+id/participantsRecyclerView" app:layout_constraintTop_toBottomOf="@+id/participantsHeadingTextView"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/participantListHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/participantsHeadingTextView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/addParticipantBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" android:textSize="20sp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>